Fixed overflow error on scroll

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ body {
         "footer  footer  footer";
     
     font-family: 'Montserrat', sans-serif;
-    overflow: hidden;
 }
 
 header {
@@ -52,6 +51,7 @@ header {
 
     border-radius: 20px;
     /* box-shadow: 2px 2px 15px rgba(80, 80, 80, 0.5); */
+    overflow: auto;
 }
 
 .pokemon-card {
